<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rotulo6"
        android:textSize="25dp"
        android:theme="@style/miEstilo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        />

    <EditText
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rotulo1"
        android:textSize="25dp"
        android:theme="@style/miEstilo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        />

    <EditText
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rotulo2"
        android:textSize="25dp"
        android:theme="@style/miEstilo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed-medium"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotulo3"
            android:backgroundTint="@color/rojoO"
            android:onClick="calcular"
            android:fontFamily="monospace"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/rotulo4"
            android:backgroundTint="@color/rojoO"
            android:onClick="nuevo"
            android:fontFamily="monospace"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/rotulo5"
            android:backgroundTint="@color/rojoO"
            android:onClick="salir"
            android:fontFamily="monospace"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="total a pagar"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0.0"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="total con descuento"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/totalD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0.0"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginTop="10dp"
        />

</androidx.appcompat.widget.LinearLayoutCompat>